2022-12-01  Sauro Menna  <smenna@users.sourceforge.net>
    * Fixed problem with packed-decimal length

2022-11-27  Sauro Menna  <smenna@users.sourceforge.net>
    * Version 1.03.04
    * Fix problem in field compare with fsign=EBCDIC/ASCII

2022-11-14  Sauro Menna  <smenna@users.sourceforge.net>
    * Version 1.03.04
    * Fixed reference to __LIBCOB_VERSION and __LIBCOB_VERSION_MINOR
      (Thanks to Simon Sobisch)
    * New option FINDREP in INREC and OUTREC control statement
    * New test case FINDREP
    * New File-status management with compatibility for GnuCOBOL 3.2 
      (Thanks to Chuck Haatvedt & Arnold Trembley)
    * Redirecting error messages to stdout 
    * Fixed errors on files used in test environments

2022-05-11  Sauro Menna  <smenna@users.sourceforge.net>
    * Modified file.c for compatibility with libcob (GnuCOBOL) version 3.2.

2022-05-08  Sauro Menna  <smenna@users.sourceforge.net>
    * Rename gctestsetup.cbl (in tests/src folder) for problems in MinGW environment
    * from gctestsetup.cbl to gctestset.cbl
    * Modified compile scripts compile.sh, compile.bat, compile_mingw.bat
    * Added the source file viewfiledate2.cbl in tests/src folder  
    * Modified job.c, file.c, outfil.c for compatibility with libcob (GnuCOBOL) version 3.2.

2022-04-06  Sauro Menna  <smenna@users.sourceforge.net>
    * Version 1.03.03
    * New Statement JOINJKEYS to join two files
    * Test cases for join and examples (testjoin.sh or testjoin.bat in gcsort/tests/script)
    * New version of MAKEFILE MinGW compatible, review LIBs
    * Update help GCSORT
    * Updated command gcsort --help 

2022-01-19  Sauro Menna  <smenna@users.sourceforge.net>
    * Version 1.03.02
    * Modified MAKEFILE project
    * New option RECORD CONTROL STATEMENT
    * New Date : DATE1, DATE2, DATE3, DATE4 with (+/-)days/month
    * New for INREC/OUTREC option CHANGE Lookup table and set with value or input field
    * Review comment style from '//' to '/*  ... */'